--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: ""
 email: your-email@example.com
 description: ""
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://manlingyang.org/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://manlingyang123.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
